# centre-api/src/main/java/com/centre/poly/schoolYear/SchoolYearController.java
@@ -8,6 +8,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+
 @RestController
 @RequestMapping("school-years")
 @RequiredArgsConstructor
@@ -25,7 +27,7 @@ public class SchoolYearController {
     public ResponseEntity<PageResponse<SchoolYearResponse>> findAll(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size) {
-        PageResponse<SchoolYearResponse> response = schoolYearService.findAll(page, size);
+        PageResponse<SchoolYearResponse> response = schoolYearService.findAllPagebale(page, size);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
@@ -39,5 +41,10 @@ public class SchoolYearController {
     public ResponseEntity<Void> setDefault(@PathVariable Long id) {
         schoolYearService.toDefault(id);
         return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @GetMapping("/all")
+    public ResponseEntity<List<SchoolYearResponse>> findAllList() {
+        return new ResponseEntity<>(schoolYearService.findAll(), HttpStatus.OK);
     }
 }
